[gd_scene load_steps=2 format=3 uid="uid://ba8xg6j0dfk0i"]

[ext_resource type="Script" uid="uid://b5anrmu3ul3w8" path="res://Menus/MainMenu.gd" id="1_i26rj"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("main_menu", "options_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i26rj")
main_menu = NodePath("MainMenu")
options_menu = NodePath("Options")

[node name="MainMenu" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="MainMenu/VBox"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 61
text = "Play"

[node name="Options" type="Button" parent="MainMenu/VBox"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 61
text = "Options"

[node name="Quit" type="Button" parent="MainMenu/VBox"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 61
text = "Quit"

[node name="Options" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 105
theme_override_constants/margin_right = 75

[node name="VLayout" type="VBoxContainer" parent="Options"]
layout_mode = 2
theme_override_constants/separation = 160

[node name="Master" type="Control" parent="Options/VLayout"]
layout_mode = 2

[node name="VLayout" type="VBoxContainer" parent="Options/VLayout/Master"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Options/VLayout/Master/VLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="Options/VLayout/Master/VLayout"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
value = 50.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="Music" type="Control" parent="Options/VLayout"]
layout_mode = 2

[node name="VLayout" type="VBoxContainer" parent="Options/VLayout/Music"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Options/VLayout/Music/VLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="Options/VLayout/Music/VLayout"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
value = 50.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="SFX" type="Control" parent="Options/VLayout"]
layout_mode = 2

[node name="VLayout" type="VBoxContainer" parent="Options/VLayout/SFX"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Options/VLayout/SFX/VLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="Options/VLayout/SFX/VLayout"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
value = 50.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="MarginContainer" type="MarginContainer" parent="Options/VLayout"]
layout_mode = 2
theme_override_constants/margin_left = 775
theme_override_constants/margin_top = -55
theme_override_constants/margin_bottom = -25

[node name="Back" type="Button" parent="Options/VLayout/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Back"

[connection signal="button_down" from="MainMenu/VBox/Play" to="." method="_play_button"]
[connection signal="button_down" from="MainMenu/VBox/Options" to="." method="_options_button"]
[connection signal="button_down" from="MainMenu/VBox/Quit" to="." method="_quit_button"]
[connection signal="value_changed" from="Options/VLayout/Master/VLayout/MasterSlider" to="Options/VLayout/Master/VLayout/MasterSlider" method="audio_level_changed"]
[connection signal="value_changed" from="Options/VLayout/Music/VLayout/MusicSlider" to="Options/VLayout/Music/VLayout/MusicSlider" method="audio_level_changed"]
[connection signal="value_changed" from="Options/VLayout/SFX/VLayout/SFXSlider" to="Options/VLayout/SFX/VLayout/SFXSlider" method="audio_level_changed"]
[connection signal="button_down" from="Options/VLayout/MarginContainer/Back" to="." method="_options_back_button"]
